navbar and banner section

--- a/index.html
+++ b/index.html
@@ -14,9 +14,20 @@
 </head>
 
 <body>
-    <header></header>
+    <header>
+        <nav>
+            <ul>
+                <li><a class="inter-bold logo" href="#">Logo</a></li>
+                <li><a class="raleway-bold button" href="#">Sign Up</a></li>
+            </ul>
+        </nav>
+        <div class="heading-description">
+            <h1 class="raleway-bold title">Best Stylish and Formal UI Template for Your Agency!</h1>
+        <a class="button focused raleway-bold" href="#">Stay Focused</a>
+        </div>
+    </header>
+
     <main>
-<p class="">Assignment1</p>
     </main>
     <footer>
 
