action section added

--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
     </header>
 
     <main>
+        <section id="action">
+            <div class="action-content">
+                <h2 class="raleway-bold">See it in Action</h2>
+                <p class="raleway-normal">Explore the live preview and imagine your brand in this bold new look.</p>
+                <a class="button raleway-bold" href="#">Launch Live Preview</a>
+            </div>
+            <div class="action-image"> </div>
+                
+        </section>
     </main>
     <footer>
 
