--- a/index.html
+++ b/index.html
@@ -37,6 +37,39 @@
             <div class="action-image"> </div>
                 
         </section>
+
+
+        <section id="users">
+            <h2 class="raleway-bold">Joined Thousands of Productive Users</h2>
+            <div class="user-detail">
+                <ul>
+                    <li>
+                        <div class="user-head inter-bold">
+                            50K
+                        </div>
+                        <div class="user-info">
+                            Active Users
+                        </div>
+                    </li>
+                    <li>
+                        <div class="user-head inter-bold">
+                            2M+
+                        </div>
+                        <div class="user-info">
+                            Focus Session
+                        </div>
+                    </li>
+                    <li>
+                        <div class="user-head inter-bold">
+                            95%
+                        </div>
+                        <div class="user-info">
+                            Satisfaction Rate
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </main>
     <footer>
 
