--- a/index.html
+++ b/index.html
@@ -70,6 +70,28 @@
                 </ul>
             </div>
         </section>
+
+        <section id="getintouch">
+            <div class="touchsection">
+                <div>
+                    <h2 class="raleway-bold touch-head">Get in Touch</h2>
+                </div>
+                <div>
+                    <form action="#">
+                        <label for="email">Email:</label> <br>
+                        <input type="email" id="email" name="email" required placeholder="Your Email Address">
+                        <br>
+                        <label for="name">Name:</label> <br>
+                        <input type="text" id="name" name="name" placeholder="Your Name" required>
+                        <br>
+                        <label for="message">Your Message:</label> <br>
+                        <textarea id="message" name="message" rows="10" placeholder="Your Message" required></textarea> 
+                        <br>  
+                        <input class="button inter-bold" type="submit" value="Get in Touch">
+                    </form>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
