--- a/index.html
+++ b/index.html
@@ -75,16 +75,16 @@
             
                 <ul class="cards">
                     <li>
-                        <img src="assets/icon-star.png" alt="">
-                        <img src="assets/icon-star.png" alt="">
-                        <img src="assets/icon-star.png" alt="">
-                        <img src="assets/icon-star.png" alt="">
-                        <img src="assets/icon-star.png" alt="">
+                        <img src="assets/icon-star.png" alt="star image">
+                        <img src="assets/icon-star.png" alt="star image">
+                        <img src="assets/icon-star.png" alt="star image">
+                        <img src="assets/icon-star.png" alt="star image">
+                        <img src="assets/icon-star.png" alt="star image">
                         <h3>Loved by Designers</h3>
                         <p class="testimonial">This template instantly leveled up our presence.” – Studio Vertex</p>
                         <div class="user-information">
                             <div class="img">
-                                <img src="assets/avatar.png" alt="">
+                                <img src="assets/avatar.png" alt="profile image">
                             </div>
                             <div class="user-feed">
                                 <p class="name-user inter-bold">
@@ -97,16 +97,16 @@
                         </div>
                     </li>
                     <li>
-                        <img src="assets/icon-star.png" alt="">
-                        <img src="assets/icon-star.png" alt="">
-                        <img src="assets/icon-star.png" alt="">
-                        <img src="assets/icon-star.png" alt="">
-                        <img src="assets/icon-star.png" alt="">
+                        <img src="assets/icon-star.png" alt="profile-icon">
+                        <img src="assets/icon-star.png" alt="profile-icon">
+                        <img src="assets/icon-star.png" alt="profile-icon">
+                        <img src="assets/icon-star.png" alt="profile-icon">
+                        <img src="assets/icon-star.png" alt="profile-icon">
                         <h3>Loved by Designers</h3>
                         <p class="testimonial">This template instantly leveled up our presence.” – Studio Vertex</p>
                         <div class="user-information">
                             <div class="img">
-                                <img src="assets/avatar.png" alt="">
+                                <img src="assets/avatar.png" alt="profile image">
                             </div>
                             <div class="user-feed">
                                 <p class="name-user inter-bold">
@@ -119,16 +119,16 @@
                         </div>
                     </li>
                     <li>
-                        <img src="assets/icon-star.png" alt="">
-                        <img src="assets/icon-star.png" alt="">
-                        <img src="assets/icon-star.png" alt="">
-                        <img src="assets/icon-star.png" alt="">
-                        <img src="assets/icon-star.png" alt="">
+                        <img src="assets/icon-star.png" alt="star icon">
+                        <img src="assets/icon-star.png" alt="star icon">
+                        <img src="assets/icon-star.png" alt="star icon">
+                        <img src="assets/icon-star.png" alt="star icon">
+                        <img src="assets/icon-star.png" alt="star icon">
                         <h3>Loved by Designers</h3>
                         <p class="testimonial">This template instantly leveled up our presence.” – Studio Vertex</p>
                         <div class="user-information">
                             <div class="img">
-                                <img src="assets/avatar.png" alt="">
+                                <img src="assets/avatar.png" alt="profile image">
                             </div>
                             <div class="user-feed">
                                 <p class="name-user inter-bold">
