--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                         <img src="assets/icon-star.png" alt="profile-icon">
                         <img src="assets/icon-star.png" alt="profile-icon">
                         <img src="assets/icon-star.png" alt="profile-icon">
-                        <h3>Loved by Designers</h3>
+                        <h3>Designer's Say</h3>
                         <p class="testimonial">This template instantly leveled up our presence.” – Studio Vertex</p>
                         <div class="user-information">
                             <div class="img">
@@ -110,7 +110,7 @@
                             </div>
                             <div class="user-feed">
                                 <p class="name-user inter-bold">
-                                    John Doe
+                                    Anne Marry
                                 </p>
                                 <p class="date">
                                     05-05-25
@@ -124,7 +124,7 @@
                         <img src="assets/icon-star.png" alt="star icon">
                         <img src="assets/icon-star.png" alt="star icon">
                         <img src="assets/icon-star.png" alt="star icon">
-                        <h3>Loved by Designers</h3>
+                        <h3>Designers Love</h3>
                         <p class="testimonial">This template instantly leveled up our presence.” – Studio Vertex</p>
                         <div class="user-information">
                             <div class="img">
@@ -132,7 +132,7 @@
                             </div>
                             <div class="user-feed">
                                 <p class="name-user inter-bold">
-                                    John Doe
+                                    Jackquiline Smith
                                 </p>
                                 <p class="date">
                                     05-05-25
