--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 </head>
 
 <body>
-    <header>
+    <header id="header">
         <nav>
             <ul>
-                <li><a class="inter-bold logo" href="#">Logo</a></li>
-                <li><a class="raleway-bold button" href="#">Sign Up</a></li>
+                <li><a class="inter-bold logo" href="#header">Xpert</a></li>
+                <li><a class="raleway-bold button" href="#getintouch">Sign Up</a></li>
             </ul>
         </nav>
         <div class="heading-description">
@@ -31,7 +31,7 @@
         <section id="action">
             <div class="action-content">
                 <h2 class="raleway-bold">See it in Action</h2>
-                <p class="raleway-normal">Explore the live preview and imagine your brand in this bold new look.</p>
+                <p class="raleway-normal">Check out the live preview and envision your brand with this striking new style.</p>
                 <a class="button raleway-bold" href="#">Launch Live Preview</a>
             </div>
             <div class="action-image"> </div>
@@ -81,7 +81,7 @@
                         <img src="assets/icon-star.png" alt="star image">
                         <img src="assets/icon-star.png" alt="star image">
                         <h3>Loved by Designers</h3>
-                        <p class="testimonial">This template instantly leveled up our presence.” – Studio Vertex</p>
+                        <p class="testimonial">This template gave our presence an instant boost.” – Studio Vertex</p>
                         <div class="user-information">
                             <div class="img">
                                 <img src="assets/avatar.png" alt="profile image">
@@ -91,7 +91,7 @@
                                     John Doe
                                 </p>
                                 <p class="date">
-                                    05-05-25
+                                    07-02-25
                                 </p>
                             </div>
                         </div>
@@ -103,17 +103,17 @@
                         <img src="assets/icon-star.png" alt="profile-icon">
                         <img src="assets/icon-star.png" alt="profile-icon">
                         <h3>Designer's Say</h3>
-                        <p class="testimonial">This template instantly leveled up our presence.” – Studio Vertex</p>
+                        <p class="testimonial">This template immediately elevated our brand image.” – Studio Vertex</p>
                         <div class="user-information">
                             <div class="img">
-                                <img src="assets/avatar.png" alt="profile image">
+                                <img src="assets/avatar2.jpg" alt="profile image">
                             </div>
                             <div class="user-feed">
                                 <p class="name-user inter-bold">
-                                    Anne Marry
+                                    Mezbah Sakib
                                 </p>
                                 <p class="date">
-                                    05-05-25
+                                    25-01-24
                                 </p>
                             </div>
                         </div>
@@ -128,11 +128,11 @@
                         <p class="testimonial">This template instantly leveled up our presence.” – Studio Vertex</p>
                         <div class="user-information">
                             <div class="img">
-                                <img src="assets/avatar.png" alt="profile image">
+                                <img src="assets/avarar1.jpg" alt="profile image">
                             </div>
                             <div class="user-feed">
                                 <p class="name-user inter-bold">
-                                    Jackquiline Smith
+                                    Habib Ullah
                                 </p>
                                 <p class="date">
                                     05-05-25
@@ -168,17 +168,17 @@
     </main>
     <footer>
         <div class="footer">
-            <div class="inter-bold logo footer-logo">LOGO</div>
+            <div class="inter-bold logo footer-logo">Xpert</div>
             <div class="footer-description">
                 Looking to take your online presence to the next level? Get in touch with us today to explore your
                 project and see how we can turn your ideas into reality.
             </div>
             <div class="footer-links">
                 <ul>
-                    <li><a class="inter-normal" href="#">Home</a></li>
-                    <li><a class="inter-normal" href="#">About</a></li>
-                    <li><a class="inter-normal" href="#">How it works</a></li>
-                    <li><a class="inter-normal" href="#">Services</a></li>
+                    <li><a class="inter-normal" href="#header">Home</a></li>
+                    <li><a class="inter-normal" href="#header">About</a></li>
+                    <li><a class="inter-normal" href="#header">How it works</a></li>
+                    <li><a class="inter-normal" href="#header">Services</a></li>
                 </ul>
             </div>
         </div>
