button link added

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </nav>
         <div class="heading-description">
             <h1 class="raleway-bold title">Best Stylish and Formal UI Template for Your Agency!</h1>
-            <a class="button focused raleway-bold" href="#">Stay Focused</a>
+            <a class="button focused raleway-bold" href="#getintouch">Stay Focused</a>
         </div>
     </header>
 
